--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -51,10 +51,10 @@
     map.enableScrollWheelZoom();  
     var marker=new BMap.Marker(new BMap.Point(116.403884,39.914887));  
     map.addOverlay(marker);  
-    var licontent="<b>天安门</b><br>";  
-        licontent+="<span><strong>地址：</strong>北京市东城区天安门广场北侧</span><br>";  
+    var licontent="<b><%= @recital.music_hall %></b><br>";  
+        licontent+="<span><strong>地址：</strong><%= @recital.address + @recital.music_hall %></span><br>";  
         licontent+="<span><strong>电话：</strong>(010)63095718,(010)63095630</span><br>";  
-        licontent+="<span class=\"input\"><strong></strong><input class=\"outset\" type=\"text\" name=\"origin\" value=\"北京站\"/><input class=\"outset-but\" type=\"button\" value=\"公交\" onclick=\"gotobaidu(1)\" /><input class=\"outset-but\" type=\"button\" value=\"驾车\"  onclick=\"gotobaidu(2)\"/><a class=\"gotob\" href=\"url=\"http://api.map.baidu.com/direction?destination=latlng:"+marker.getPosition().lat+","+marker.getPosition().lng+"|name:天安门"+"®ion=北京"+"&output=html\" target=\"_blank\"></a></span>";
+        licontent+="<span class=\"input\"><strong></strong><input class=\"outset\" type=\"text\" name=\"origin\" value=\"<%= @recital.city %>站\"/><input class=\"outset-but\" type=\"button\" value=\"公交\" onclick=\"gotobaidu(1)\" /><input class=\"outset-but\" type=\"button\" value=\"驾车\"  onclick=\"gotobaidu(2)\"/><a class=\"gotob\" href=\"url=\"http://api.map.baidu.com/direction?destination=latlng:"+marker.getPosition().lat+","+marker.getPosition().lng+"|name:天安门"+"®ion=北京"+"&output=html\" target=\"_blank\"></a></span>";
  
     var hiddeninput="<input type=\"hidden\" value=\""+'北京'+"\" name=\"region\" /><input type=\"hidden\" value=\"html\" name=\"output\" /><input type=\"hidden\" value=\"driving\" name=\"mode\" /><input type=\"hidden\" value=\"latlng:"+marker.getPosition().lat+","+marker.getPosition().lng+"|name:天安门"+"\" name=\"destination\" />";
  
