--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -43,6 +43,8 @@
 </ul>
 <% end %>
 
+<%= javascript_include_tag 'jquery-2.2.0', 'data-turbolinks-track' => true %>
+
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=byjr8PEVSXNaCz9PgYzEPfLR"></script>   
 
 <script type="text/javascript"> 
