--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -49,7 +49,7 @@
 
 <script type="text/javascript"> 
     $(document).ready(function () {
-        $.get("http://api.map.baidu.com/geocoder/v2/?ak=E4805d16520de693a3fe707cdc962045&callback=renderOption&output=json&address=成都市娇子音乐厅", function(result) {
+        $.get("http://api.map.baidu.com/geocoder/v2/?ak=byjr8PEVSXNaCz9PgYzEPfLR&output=json&address=成都市娇子音乐厅", function(result) {
             console.log(result);
         });
     });
