--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -48,9 +48,9 @@
 
 <script type="text/javascript"> 
     var map = new BMap.Map("container");  
-    map.centerAndZoom(new BMap.Point(104.103301,30.65503), 13);  
+    map.centerAndZoom(new BMap.Point(<%= @recital.lat %>, <%= @recital.lng %>), 13);  
     map.enableScrollWheelZoom();  
-    var marker=new BMap.Marker(new BMap.Point(104.103301,30.65503));  
+    var marker=new BMap.Marker(new BMap.Point(<%= @recital.lat %>, <%= @recital.lng %>));  
     map.addOverlay(marker);  
     var licontent="<b><%= @recital.music_hall %></b><br>";  
         licontent+="<span><strong>地址：</strong><%= @recital.address + @recital.music_hall %></span><br>";  
