--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -44,7 +44,7 @@
 <% end %>
 
 
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=GOgyEGAvKjip4HtcnwfwOh5p"></script>   
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4"></script>   
 
 <script type="text/javascript"> 
     var map = new BMap.Map("container");  
