--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -23,7 +23,11 @@
 <!--             <a href="#" class="btn-buy-buy-buy align-center">
                 立即购买
             </a> -->
-            <%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
+            <% if @recital.sold_out? %>
+                <button class="btn-buy-buy-buy align-center" disabled="true">已售完</button>
+            <% else %>
+                <%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
+            <% end %>
         </div>
     </div>
 </div>
