--- a/app/views/admin/recitals/show.html.erb
+++ b/app/views/admin/recitals/show.html.erb
@@ -36,4 +36,15 @@ as well as a link to its edit page.
     <dd class="attribute-data attribute-data--<%=attribute.html_class%>"
         ><%= render_field attribute %></dd>
   <% end %>
+  <dt class="attribute-label">VENUE IMAGE</dt>
+  <dd class="attribute-data">
+    <%= image_tag page.resource.venue_image.url, width: '300' %>
+  </dd>
 </dl>
+
+<%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
+  <%= f.file_field :venue_image %>
+  <%= f.submit %>
+<% end %>
+
+
