--- a/app/views/admin/recitals/show.html.erb
+++ b/app/views/admin/recitals/show.html.erb
@@ -41,7 +41,7 @@ as well as a link to its edit page.
     <%= image_tag page.resource.venue_image.url, width: '300' %>
     <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
       <%= f.file_field :venue_image %>
-      <%= f.submit %>
+      <%= f.submit value: 'Update Venue Image' %>
     <% end %>
   </dd>
   <dt class="attribute-label">POSTER</dt>
@@ -49,7 +49,7 @@ as well as a link to its edit page.
     <%= image_tag page.resource.poster.url, width: '300' %>
     <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
       <%= f.file_field :poster %>
-      <%= f.submit %>
+      <%= f.submit value: 'Update Poster' %>
     <% end %>
   </dd>
 </dl>
