--- a/app/assets/stylesheets/_cd.scss
+++ b/app/assets/stylesheets/_cd.scss
@@ -14,5 +14,6 @@ $darken-40: rgba(0, 0, 0, 0.4);
 $darken-50: rgba(0, 0, 0, 0.5);
 $darken-60: rgba(0, 0, 0, 0.6);
 $darken-70: rgba(0, 0, 0, 0.7);
+$darken-80: rgba(0, 0, 0, 0.8);
 
 $color1: #D1DFCB;
