Card with poster, changing to photos.

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -11,16 +11,21 @@
                     </div>
                     <div class="coverflow-overlay-text">
                         <button class="recital-detail-btn">查看详情</button>
-                        <div>成都站</div>
-                        <div>2016 年 2 月 30 日</div>
+                        <div class="recital-info-bottom">
+                            <div class="recital-title">成都站 - 已售完</div>
+                            <div>2016 年 2 月 30 日</div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="coverflow-item">
-                <div class="coverflow-content">
-                    <div class="coverflow-card">
-                        <div class="coverflow-card-image">
-                            <%= image_tag 'poster.png' %>
+                    <div class="coverflow-overlay-right recital-info-right">
+                        <div class="recital-title">
+                            成
+                            <br />
+                            都
+                            <br />
+                            站
+                        </div>
+                        <div class="recital-status">
+                            售<br />完
                         </div>
                     </div>
                 </div>
@@ -32,13 +37,23 @@
                             <%= image_tag 'poster.png' %>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="coverflow-item">
-                <div class="coverflow-content">
-                    <div class="coverflow-card">
-                        <div class="coverflow-card-image">
-                            <%= image_tag 'poster.png' %>
+                    <div class="coverflow-overlay-text">
+                        <button class="recital-detail-btn">查看详情</button>
+                        <div class="recital-info-bottom">
+                            <div class="recital-title">武汉站 - 已售完</div>
+                            <div>2016 年 2 月 30 日</div>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-right recital-info-right">
+                        <div class="recital-title">
+                            武
+                            <br />
+                            汉
+                            <br />
+                            站
+                        </div>
+                        <div class="recital-status">
+                            在<br />售
                         </div>
                     </div>
                 </div>
@@ -48,6 +63,81 @@
                     <div class="coverflow-card">
                         <div class="coverflow-card-image">
                             <%= image_tag 'poster.png' %>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-text">
+                        <button class="recital-detail-btn">查看详情</button>
+                        <div class="recital-info-bottom">
+                            <div class="recital-title">广州站 - 已售完</div>
+                            <div>2016 年 2 月 30 日</div>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-right recital-info-right">
+                        <div class="recital-title">
+                            广
+                            <br />
+                            州
+                            <br />
+                            站
+                        </div>
+                        <div class="recital-status">
+                            在<br />售
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="coverflow-item">
+                <div class="coverflow-content">
+                    <div class="coverflow-card">
+                        <div class="coverflow-card-image">
+                            <%= image_tag 'poster.png' %>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-text">
+                        <button class="recital-detail-btn">查看详情</button>
+                        <div class="recital-info-bottom">
+                            <div class="recital-title">厦门站 - 已售完</div>
+                            <div>2016 年 2 月 30 日</div>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-right recital-info-right">
+                        <div class="recital-title">
+                            厦
+                            <br />
+                            门
+                            <br />
+                            站
+                        </div>
+                        <div class="recital-status">
+                            在<br />售
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="coverflow-item">
+                <div class="coverflow-content">
+                    <div class="coverflow-card">
+                        <div class="coverflow-card-image">
+                            <%= image_tag 'poster.png' %>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-text">
+                        <button class="recital-detail-btn">查看详情</button>
+                        <div class="recital-info-bottom">
+                            <div class="recital-title">长沙站 - 已售完</div>
+                            <div>2016 年 2 月 30 日</div>
+                        </div>
+                    </div>
+                    <div class="coverflow-overlay-right recital-info-right">
+                        <div class="recital-title">
+                            长
+                            <br />
+                            沙
+                            <br />
+                            站
+                        </div>
+                        <div class="recital-status">
+                            在<br />售
                         </div>
                     </div>
                 </div>
