--- a/app/assets/stylesheets/_cd.scss
+++ b/app/assets/stylesheets/_cd.scss
@@ -5,6 +5,9 @@ $lighter-20: rgba(255, 255, 255, 0.2);
 $lighter-30: rgba(255, 255, 255, 0.3);
 $lighter-40: rgba(255, 255, 255, 0.4);
 $lighter-50: rgba(255, 255, 255, 0.5);
+$lighter-60: rgba(255, 255, 255, 0.6);
+$lighter-80: rgba(255, 255, 255, 0.8);
+$lighter-90: rgba(255, 255, 255, 0.9);
 
 $darken-5: rgba(0, 0, 0, 0.05);
 $darken-10: rgba(0, 0, 0, 0.1);
@@ -15,5 +18,6 @@ $darken-50: rgba(0, 0, 0, 0.5);
 $darken-60: rgba(0, 0, 0, 0.6);
 $darken-70: rgba(0, 0, 0, 0.7);
 $darken-80: rgba(0, 0, 0, 0.8);
+$darken-90: rgba(0, 0, 0, 0.9);
 
 $color1: #D1DFCB;
