--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,5 +1,6 @@
 
 @import "cd";
+@import "essential";
 
 .coverflow-cont {
 	overflow: hidden;
@@ -8,7 +9,12 @@
 }
 
 .coverflow {
-	width: 24em;
+	width: 28em;
+    @include media-mobile {
+        width: 18em;
+    }
+    @include mq($until: 480px) {
+        margin: 0 0.5em; }
 	position: relative;
 	margin: 0 auto;
 
@@ -55,18 +61,75 @@
     text-shadow: 1px 0 1px black;
 }
 
+.coverflow-overlay-right {
+    position: absolute;
+    height: 100%;
+    right: 0;
+    background: linear-gradient(to right, transparent, black);
+    top: 0;
+    text-align: left;
+}
+
+.recital-title {
+    padding: 0.5rem;
+    font-size: x-large;
+    font-weight: bolder;
+    text-shadow: 1px 0 1px black;
+    .recital-info-bottom & {
+        @include media-mobile {
+            font-size: 1.5em; }
+    }
+}
+
+.recital-status {
+    position: absolute;
+    bottom: 0;
+    padding: 0.9rem;
+    margin-bottom: 2rem;
+    white-space: nowrap;
+    font-size: large;
+}
+
+.recital-info-right {
+    transition: all 0.5s ease-in-out;
+    .coverflow-item-active & {
+        opacity: 0;
+        visibility: hidden;
+    }
+    
+    .recital-status {
+        // transform: rotate3d(0, 0, 1, 90deg);
+    }
+}
+
+.recital-info-bottom {
+    transition: all 1s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+    .coverflow-item-active & {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
 .coverflow-card {
     // height: 32em;
 }
 
 button.recital-detail-btn {
-    color: rgba(51, 254, 255, 0.5);
-    background-color: $darken-70;
-    border: none;
-    padding: 0.5em 1em;
-    border-radius: 1.5em;
-    text-shadow: 0 1px 0 black;
-    border: 1px solid $lighter-30;
+    color: white;
+    background: linear-gradient(to bottom, $darken-50, black);
+    border: 2px solid $lighter-80;
+    border-radius: 2em;
+    padding: 0.4em 1.8em;
     margin-bottom: 1em;
-    box-shadow: 0 0 1em $lighter-30;
+    font-weight: bolder;
+    text-shadow: 0 0 4px black;
+    box-shadow: 0 0 1em 2px black, 0 0 1em 2px black inset;
+    
+    &:disabled {
+        cursor: not-allowed;
+        border: 2px solid $lighter-40;
+        color: #aaa;
+    }
 }
