--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -9,9 +9,12 @@
 }
 
 .coverflow {
-	width: 28em;
+	width: 48em;
+    @include mq($until: desktop) {
+        width: 36em;
+    }
     @include media-mobile {
-        width: 18em;
+        width: 22em;
     }
     @include mq($until: 480px) {
         margin: 0 0.5em; }
@@ -85,7 +88,7 @@
     position: absolute;
     bottom: 0;
     padding: 0.9rem;
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
     white-space: nowrap;
     font-size: large;
 }
@@ -118,14 +121,14 @@
 
 button.recital-detail-btn {
     color: white;
-    background: linear-gradient(to bottom, $darken-50, black);
+    background: linear-gradient(to bottom, $darken-30, $darken-60);
     border: 2px solid $lighter-80;
     border-radius: 2em;
     padding: 0.4em 1.8em;
     margin-bottom: 1em;
     font-weight: bolder;
     text-shadow: 0 0 4px black;
-    box-shadow: 0 0 1em 2px black, 0 0 1em 2px black inset;
+    box-shadow: 0 0 1em 2px $darken-50, 0 0 1em 2px $darken-50 inset;
     
     &:disabled {
         cursor: not-allowed;
